--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* Scrollbar'ı tamamen gizle */
+::-webkit-scrollbar {
+  display: none;
+}
+
